Fixed TwoColmnSections breaking nav

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
     <div class="Section">
       <h2 class="text-blue">Let's Get In Touch</h2>
       <br>
-      <p>Please let me know if you would like to discuss some new idea or make a few suggestions to one of my pre-existing apps. Either way, I look forward to hearing from you</p>
+      <p>Please let me know if you would like to discuss some new idea or make a few suggestions to one of my pre-existing apps. Either way, I look forward to hearing from you.</p>
     </div>
   </div>
   <div id="footer"></div>
