--- a/lifear_business.html
+++ b/lifear_business.html
@@ -108,7 +108,7 @@
                 </table>
             </div>             
             <div id="AddingTargets" class="TwoColumnSection">
-                <img src="Resources/pages/lifear/how_to_manage_targets.png" style="max-height: 50vh">
+                <img src="Resources/pages/lifear/how_to_manage_targets.png" class="lifearImage">
                 <div>
                     <h2 class="text-blue">Single Click Target Management</h2>
                     <p>
@@ -124,11 +124,11 @@
                     LifeAR's content management approach allows for adding content and targets from your favourite Cloud storage providers (i.e. Google Drive) as well as straight from your phone.
                 </p>
             </div>
-            <img src="Resources/pages/lifear/locations_to_add_from.png">
+            <img src="Resources/pages/lifear/locations_to_add_from.png"  class="lifearImage">
             </div>
 
             <div class="TwoColumnSection">
-                <img src="Resources/pages/lifear/how_to_upload_targets.png" style="max-height: 50vh">
+                <img src="Resources/pages/lifear/how_to_upload_targets.png"  class="lifearImage">
                 <div>
                     <h2 class="text-blue">Add New Targets in 5 Steps</h2>
                     <ol>
