--- a/portfolio.html
+++ b/portfolio.html
@@ -129,9 +129,7 @@
     <div id="footer"></div>
     <div id="superFooter"></div>
     <script>
-        $("#footer").load("html-elements/actionFooter.html", function(){
-            $(".actionButton").addClass("background");
-        });
+        $("#footer").load("html-elements/actionFooter.html");
         $("#superFooter").load("html-elements/superFooter.html");
     </script>
     <!-- main content ends -->
