Fixed scaling issues on Safari

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,11 +28,11 @@
         <div id="serviceSection" class="Section">
             <h2 class="text-blue">Services</h2>
             <div class="row">
-                <img class="icon smallIcons rowItem" src="Resources/pages/portfolio/services_app.png">
-                <img class="icon smallIcons rowItem" src="Resources/pages/portfolio/services_game.png">
-                <img class="icon smallIcons rowItem" src="Resources/pages/portfolio/services_web.png">
-                <img class="icon smallIcons rowItem" src="Resources/pages/portfolio/services_imgvid.png">
-                <img class="icon smallIcons rowItem" src="Resources/pages/portfolio/services_3d.png">
+                <img class="serviceIcon" src="Resources/pages/portfolio/services_app.png">
+                <img class="serviceIcon" src="Resources/pages/portfolio/services_game.png">
+                <img class="serviceIcon" src="Resources/pages/portfolio/services_web.png">
+                <img class="serviceIcon" src="Resources/pages/portfolio/services_imgvid.png">
+                <img class="serviceIcon" src="Resources/pages/portfolio/services_3d.png">
             </div>
             <a class="button btn-blue" href="contact.html">Request a service</a>
         </div>
