a few more fixes to content and scaling

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         in this field. Since entering high school, I have been developing this mobile app-based start-up venture,
         DGApps. I am interested in science and engineering and I aspire to create innovative and inspiring products.
         </p>
+        <a class="button btn-red" href="journey.html">My Entrepreneurial Journey</a>
       </div>
     </div>
 
