--- a/portfolio.html
+++ b/portfolio.html
@@ -89,17 +89,17 @@
                     <div class="appButton blue-border">
                         <img class="appLogo" src="Resources/pages/portfolio/WalkCamLogo.png">
                         <h3>WalkCam</h3>
-                        <a class="button btn-blue" href="https://play.google.com/store/apps/details?id=apps.daniel.com.walkcam">Learn More</a>
+                        <a class="button btn-blue" target="_blank" href="https://play.google.com/store/apps/details?id=apps.daniel.com.walkcam">Learn More</a>
                     </div>
                     <div class="appButton red-border">
                             <img class="appLogo" src="Resources/pages/portfolio/DodgeVRLogo.png">
                             <h3>DodgeVR</h3>
-                            <a class="button btn-red" href="https://play.google.com/store/apps/details?id=apps.daniel.com.dodgevr">Learn More</a>
+                            <a class="button btn-red" target="_blank" href="https://play.google.com/store/apps/details?id=apps.daniel.com.dodgevr">Learn More</a>
                     </div>
                     <div class="appButton blue-border">
                             <img class="appLogo" src="Resources/pages/portfolio/TouchLockLogo.png">
                             <h3>Touch Lock</h3>
-                            <a class="button btn-blue" href="https://play.google.com/store/apps/details?id=apps.daniel.com.touchlock">Learn More</a>
+                            <a class="button btn-blue" target="_blank" href="https://play.google.com/store/apps/details?id=apps.daniel.com.touchlock">Learn More</a>
                     </div>
                 </div>
             </div>
@@ -110,17 +110,17 @@
                     <div class="appButton blue-border">
                             <img class="appLogo" src="Resources/pages/portfolio/crystalClear.png">
                             <h3>Crystal Clear Goal Setting</h3>
-                            <a class="button btn-blue" href="https://crystalcleargoals.com/">Learn More</a>
+                            <a class="button btn-blue" target="_blank" href="https://crystalcleargoals.com/">Learn More</a>
                     </div>
                     <div class="appButton teal-border">
                         <img class="appLogo" src="Resources/pages/portfolio/selc.png">
                         <h3>S.E.L.C.</h3>
-                        <a class="button btn-teal" href="https://selc.ed.brocku.ca/">Learn More</a>
+                        <a class="button btn-teal" target="_blank" href="https://selc.ed.brocku.ca/">Learn More</a>
                     </div>
                     <div class="appButton blue-border">
                             <img class="appLogo" src="Resources/pages/portfolio/powersuit.png">
                             <h3>The PowerSuit</h3>
-                            <a class="button btn-blue" href="https://thepowersuit.com/">Learn More</a>
+                            <a class="button btn-blue" target="_blank" href="https://thepowersuit.com/">Learn More</a>
                     </div>
                 </div>
             </div>
