--- a/html-elements/socialFooter.html
+++ b/html-elements/socialFooter.html
@@ -1,7 +1,8 @@
 <div class="footer">
     <h2 class="connectText text-blue">Let's Connect</h2>
-    <a class="socialButton area1" href="https://www.linkedin.com/in/daniel-genkin-dgapps/"></a>
-    <a class="socialButton area2" href="https://www.facebook.com/DGApps.page/"></a>
-    <a class="socialButton area3" href="https://twitter.com/DGApps_Dev?lang=en"></a>
-    <a class="socialButton area4" href="mailto:help.dgapps@gmail.com"></a>
+    <a class="socialButton area1" target="_blank" href="https://www.linkedin.com/in/daniel-genkin-dgapps/"></a>
+    <a class="socialButton area2" target="_blank" href="https://www.facebook.com/DGApps.page/"></a>
+    <a class="socialButton area3" target="_blank" href="https://twitter.com/DGApps_Dev?lang=en"></a>
+    <a class="socialButton area4" target="_blank" href="https://www.youtube.com/channel/UCRr8tL0EirJDJT99EcdVAgg"></a>
+    <a class="socialButton area5" target="_blank" href="mailto:help.dgapps@gmail.com"></a>
 </div>
