--- a/html-elements/pricing-table.html
+++ b/html-elements/pricing-table.html
@@ -1,20 +1,18 @@
 <script>
-    function createPricingTable(element, title, description, numImgs, numVids, price, isCustom){
+    function createPricingTable(element, title, description, numImgs, price, isCustom){
         let target = $(element).find(".pricingTable");
 
         target.find(".planTitle").text(title);
-        target.find(".description").text(description);
         target.find(".price").text(price);
 
         if (isCustom){
+            target.find(".description").text(description);
             target.find(".numImgs").hide();
-            target.find(".numVids").hide();
             target.find(".imgTarget").hide();
-            target.find(".vidTarget").hide();
             target.addClass("custom");
         }else{
             target.find(".numImgs").text(numImgs);
-            target.find(".numVids").text(numVids);
+            target.find(".description").hide();
         }
     }
 </script>
@@ -22,9 +20,7 @@
     <h2 class="planTitle text-blue">The Blah Plan</h2>
     <p class="description">blah blah blah</p>
     <h1 class="numImgs text-blue">1</h1>
-    <p class="imgTarget">Image Targets</p>
-    <h1 class="numVids text-blue">1</h1>
-    <p class="vidTarget">Video Targets</p>
+    <p class="imgTarget">Targets</p>
     <h2 class="price">$10</h2>
     <h5 class="priceAfter">/month</h5>
 </div>
