Update LifeAR pages with new colors and pricing, also hid testimonials

--- a/lifear-gallery.html
+++ b/lifear-gallery.html
@@ -24,19 +24,19 @@
     <!-- main content -->
     <div id="contents">
         <div class="Section">
-            <h2 class="text-blue">DGApps’ Targets</h2>
+            <h2 class="text-lifear">DGApps’ Targets</h2>
             <div class="row">
                 <img class="galleryImage" src="Resources/pages/lifear/gallery/smallposter.png">
                 <img class="galleryImage" src="Resources/pages/lifear/gallery/dgappscard.jpg">
                 <img class="galleryImage" src="Resources/pages/lifear/gallery/poster.png">
             </div>
-            <h2 class="text-blue">ScienceAR Targets</h2>
+            <h2 class="text-lifear">ScienceAR Targets</h2>
             <div class="row">
                 <img class="galleryImage" src="Resources/pages/lifear/gallery/math.png">
                 <img class="galleryImage" src="Resources/pages/lifear/gallery/physics.png">
                 <img class="galleryImage" src="Resources/pages/lifear/gallery/tides.png">
             </div>
-            <h2 class="text-blue">Community Targets</h2>
+            <h2 class="text-lifear">Community Targets</h2>
             <div class="row">
                 <img class="galleryImage" src="Resources/pages/lifear/gallery/monkai.png">
                 <img class="galleryImage" src="Resources/pages/lifear/gallery/module-2-copy_2.jpg">
