--- a/lifear.html
+++ b/lifear.html
@@ -12,13 +12,18 @@
   <!-- template -->
   <div id="nav"></div>
   <script >
-      $("#nav").load("html-elements/nav.html");
+     $("#nav").load("html-elements/nav.html", function(){
+            $(".burger").addClass("lifear");
+            $(".bar").addClass("lifear");
+            $("#menu").addClass("lifear");
+            $(".innerMenuLink").addClass("lifear");
+        });
   </script>
   <!-- main content -->
   <div id="lifeARSplashContent">
     <h1 id="title1" class="title">Are You Ready To Discover AR?</h1>
-    <a id="button1" class="button btn-blue inverseButton" href="lifear_consumer.html">User</a>
-    <a id="button2" class="button btn-blue inverseButton" href="lifear_business.html">Content Owner</a>
+    <a id="button1" class="button btn-lifear-dark inverseButton" href="lifear_consumer.html">User</a>
+    <a id="button2" class="button btn-lifear-dark inverseButton" href="lifear_business.html">Content Owner</a>
     <h1 id="title2" class="title">...And Foster A Paperless World</h1>
   </div>
   <!-- main content ends -->
