Added 404 page and fixes nav index.html link

--- a/html-elements/nav.html
+++ b/html-elements/nav.html
@@ -8,7 +8,7 @@
 </label>
 <nav id="menu">
 	<ul id="list">
-      <li><a class="navText" href="index.html">Home</a></li>
+      <li><a class="navText" href="/">Home</a></li>
       <li><a class="navText" href="lifear.html">LifeAR</a>
         <ul class="innerMenu">
           <li><a class="navTextInner" href="lifear-gallery.html">Gallery</a></li>
