--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div id="AboutSection" class="Section">
       <h2 class="text-blue">About</h2>
       <p class="leftCenter rightCenter">DGApps was founded in 2015 with a mission to create innovative and inspiring
-        software. Our vision is to enhance the capabilities of mobile devices and find app-based based solutions for
+        software. Our vision is to enhance the capabilities of mobile devices and find app-based solutions for
         everyday problems.</p>
     </div>
 
